@@ -39,6 +39,8 @@ Version 1.0
 
 - Fixes in the IRC and MuPad lexers.
 
+- Fix function and interface name highlighting in the Java lexer.
+
 - Fix at-rule handling in the CSS lexer.
 
 - Handle KeyboardInterrupts gracefully in pygmentize.
